deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-app
    version: v1
  name: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: demo-app
        version: v1
    spec:
      containers:
      - image: quay.io/gsalgadoartola/demo-app:1.0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: "/healthz"
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
        name: demo-app
        ports:
        - containerPort: 8080
          name: http-api
          protocol: TCP
        readinessProbe:
          httpGet:
            path: "/healthz"
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
        resources:
          limits:
            cpu: 150m
            memory: 512Mi
          requests:
            cpu: 20m
            memory: 300Mi
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        capabilities: {}
        privileged: false
      terminationGracePeriodSeconds: 30
