service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-ruby
    version: v1
  name: demo-ruby
spec:
  ports:
  - name: http-api
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: demo-ruby
    version: v1
  type: ClusterIP
